ejemplos de Javascript basico.

--- a/code/javascript/index.html
+++ b/code/javascript/index.html
@@ -1,6 +1,8 @@
-<html>
+<html lang="es">
   <head>
       <title>Node.js + MondoDB</title>
+      <meta charset="utf-8"/>
+      <script type="text/javascript" src= "04_funciones.js" ></script> 
   </head>  
   <body>
       <h1>Seminario Profesional</h1>
