Carga de archivos al repositorio de GitHub.

--- a/code/javascript/index.html
+++ b/code/javascript/index.html
@@ -1,10 +1,12 @@
-<html lang="es">
-  <head>
-      <title>Node.js + MondoDB</title>
-      <meta charset="utf-8"/>
-      <script type="text/javascript" src= "04_funciones.js" ></script> 
-  </head>  
-  <body>
-      <h1>Seminario Profesional</h1>
-  </body>
+<html>
+    <head>
+        <title>Node.js + MongoDB</title>
+        <script type="text/javascript" src="04_funciones.js"></script>
+    </head>
+    <body>
+
+        <h1>Seminario Profesional Node.js + MongoDB</h1>
+    </body>
+
+
 </html>
