--- a/code/javascript/index.html
+++ b/code/javascript/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Node.js + MongoDB</title>
-        <script type="text/javascript" src="04_funciones.js"></script>
+        <script type="text/javascript" src="06_estructuras_repetitivas.js"></script>
     </head>
     <body>
 
