--- a/code/javascript/index.html
+++ b/code/javascript/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>Node.js + MongoDB</title>
-        <script type="text/javascript" src="05_objetos.js"></script>
+        <meta charset="utf-8" />
+        <script type="text/javascript" src="08_condicionales.js"></script>
     </head>
     <body>
 
