--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
      </head>
      <body>
          <h1>Node.js + MongoDB</h1>
-         <h2> Karol Moncayo Ronquillo</h2>
+         <h2> Karol Cristina Moncayo Ronquillo </h2>
      </body>
 </html>
